Satellite FOR improvements